<resources>
    <string name="app_name">ExerciseYourDemons</string>
    <string name="title_activity_maps">Map</string>
    <string name="small_static_map_of_location">Small static map of location</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="separator_line">Separator Line</string>
    <string name="time">TIME</string>
    <string name="distance">DISTANCE</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="ok">OK</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="date">date</string>
    <string name="time_lower">time</string>
</resources>
